# wp_posts_api

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  apispec.yaml  env.template
src/: cors.rs  get.rs  lib.rs  main.rs  models.rs  pool.rs  response.rs  schema.rs
