[package]
name = "asta-jobboerse-api"
description = "Rocket API for the WP Job Manager Plugin running on asta.upb.de"
version = "0.1.1"
authors = ["Leon Tappe <ltappe@mail.uni-paderborn.de>"]
homepage = "https://asta.upb.de/"
repository = "https://git.upb.de/ltappe/asta-jobboerse-api.git"
license = "AGPL-3.0-or-later"

[dependencies]
diesel = {version = "1.3.3", features = ["mysql", "r2d2", "chrono"]}
r2d2 = "0.8.2"
chrono = {version = "0.4.6", features = ["serde"]}
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
rocket = "0.3.17"
rocket_contrib = "0.3.17"
rocket_codegen = "0.3.17"