[package]
name = "wp_posts_api"
description = "Rocket API for Wordpress Postings"
version = "0.1.2"
authors = ["Leon Tappe <ltappe@mail.uni-paderborn.de>", "Gerrit Pape <papeg@mail.uni-paderborn.de"]
homepage = "https://asta.upb.de/"
repository = "https://git.upb.de/asta/wp_posts_api.git"
license = "AGPL-3.0-or-later"

[dependencies]
diesel = {version = "1.4", features = ["mysql", "r2d2", "chrono"]}
chrono = {version = "0.4", features = ["serde"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.4"
rocket_contrib = "0.4"
rocket_codegen = "0.4"
rocket_cors = "0.4"
